src/objects/Vertical_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Animal Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset and Facility Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document and Records Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Communication Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receiving/Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse Logistics Merchandise Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traceability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raw Material Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile HMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Docking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Store Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandising and Planograms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baggage Reconciliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticketing/Citations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yard Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Registry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vertical_Segment__c</fullName>
        <label>Vertical Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil and Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceutical and Medical Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic, Glass, and Pottery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Textiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Equipment - Auto Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Equipment - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Railroad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-party Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing and Distribution Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Store Front Retailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Storefront: Department Stores and Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Storefront: Drug Stores/Retail Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Storefront: Electronics and Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Storefront: Gas and Convenience Stations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Storefront: Grocery/Supermarket</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Service Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation and Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vertical Hierarchy</label>
    <nameField>
        <label>Vertical Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vertical Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>